fixed vertical alignment and footer

--- a/client/client/public/scss/dashboard.scss
+++ b/client/client/public/scss/dashboard.scss
@@ -68,21 +68,38 @@ hr {
     margin-left: $margin-left
 }
 
-.col-md-6,
-.col-md-3 {
+%col-md {
     border: 0;
     margin: 0;
     padding: 0;
+    height: 100%
+}
+
+.container-fluid,
+.col-md {
+    @extend %col-md;
+    &-6 {
+        @extend %col-md
+    }
+    ;
+    &-3 {
+        @extend %col-md;
+        background-color: grey
+    }
+}
+
+@mixin sidebar-default-style($textAlign:center, $defWidth:100%, $defHeight:100%, $defMargin:0) {
+    text-align: $textAlign;
+    width: $defWidth;
+    height: $defHeight;
+    margin: $defMargin
 }
 
 .admin-sidebar {
-    text-align: center;
+    @include sidebar-default-style();
     border: 0;
     padding: 10px 0px 0px 0px;
-    background-color: #B3B3B3;
-    height: 100%;
-    width: 100%;
-    margin: 0;
+    background: #B3B3B3;
     &>.btn {
         width: 200px;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -135,10 +152,7 @@ hr {
         }
     }
     #wrapper {
-        text-align: center;
-        width: 100%;
-        height: 62%;
-        margin: auto;
+        @include sidebar-default-style();
         padding: 4px
     }
     .dropdown {
@@ -148,20 +162,20 @@ hr {
             background-color: rgb(9, 60, 83);
         }
     }
-    #sidebar-views {
-        text-align: center;
-        width: 100%;
+}
+
+#sidebar-views {
+    @include sidebar-default-style();
+    margin-bottom: 0;
+    span {
+        @include sidebar-views(left, 25%);
+        margin-top: 5px;
         margin-bottom: 0;
-        span {
-            @include sidebar-views(left, 25%);
-            margin-top: 5px;
-            margin-bottom: 0;
-            &:hover {
-                cursor: pointer
-            }
-            p {
-                @include sidebar-views(right, 20px);
-            }
+        &:hover {
+            cursor: pointer
+        }
+        p {
+            @include sidebar-views(right, 20px);
         }
     }
 }
@@ -499,4 +513,11 @@ $display: inline-block;
 .upload-file {
     height: 40px;
     margin-bottom: 10px
+}
+
+footer {
+    text-align: center;
+    color: #A22612;
+    font-weight: bold;
+    border-top: 1px solid #1D299E
 }
