--- a/client/client/public/scss/home.scss
+++ b/client/client/public/scss/home.scss
@@ -19,9 +19,7 @@ $after-triangle-height: 10px;
 body {
     font-family: $font-stack;
     font-weight: 400;
-    background-image: url(../images/background.jpg);
     font-size: $font-size;
-    height: 600px
 }
 
 %dropdown-menu-triangle-shared {
